# BMtoBMP

./: .gitignore  CMakeLists.txt  README.md
include/: bm_to_bmp_converter.h
src/: main.c
